# julian-gregory

./: .gitignore  README.md  deploy_to_ge.py  deployment_metadata.json  pyproject.toml
deploy_to_gemini_enterprise/: deploy_to_ge.py
julian_gregory/: agent.py  helper_funcs.py  scopes.py  tools.py
tests/integration/: test_agent.py
tests/unit/: test_free_slots.py  test_free_slots_for_multiple_users.py  test_tools.py
token_and_creds/: README.md  deployment_metadata.json
